<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navAboutMe">

    <fragment
        android:id="@+id/navAboutMe"
        android:name="com.kuba.resumeapp.ui.home.AboutMeFragment"
        android:label="@string/about_me"
        tools:layout="@layout/fragment_about_me" />

    <fragment
        android:id="@+id/navResume"
        android:name="com.kuba.resumeapp.ui.dashboard.ResumeFragment"
        android:label="@string/resume"
        tools:layout="@layout/fragment_resume" />

    <fragment
        android:id="@+id/navMore"
        android:name="com.kuba.resumeapp.ui.notifications.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
</navigation>